добавляет страницу благоустройство 3

--- a/source/sass/blocks/improvement-stage.scss
+++ b/source/sass/blocks/improvement-stage.scss
@@ -35,6 +35,14 @@
 
     transform: translateY(-50%);
   }
+
+  &--opened {
+    color: var(--color-interactive-default, $blue-default);
+
+    &::before {
+      background-color: var(--color-interactive-default, $blue-default);
+    }
+  }
 }
 
 .improvement-stage__dates {
