--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -164,10 +164,15 @@
       margin-bottom: 6px;
     }
 
+    @media (max-width: $desktop-width - 1) {
+      margin-left: $tablet-padding;
+      margin-right: $tablet-padding;
+    }
+
     @media (max-width: $tablet-width - 1) {
       padding: 24px 32px 22px 64px;
-      margin-top: 14px;
-      margin-bottom: 40px;
+      margin: 14px $mobile-padding 40px;
+      // margin-bottom: 40px;
 
       .info-banner__title {
         margin-top: 0;
