--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,6 +19,7 @@ $blue-accent: #116ca6;
 $light-blue: #eaf4fa;
 $light-blue-accent: #9bd2f4;
 $light-grey: #e3e8ee;
+$select-grey: #f5f6f7;
 $grey: #707b8c;
 $grey-default: #a6abb3;
 $pale-red: #fef9f9;
