--- a/source/sass/blocks/area-improvement.scss
+++ b/source/sass/blocks/area-improvement.scss
@@ -76,3 +76,82 @@
   }
 }
 
+.area-improvement--list {
+  .area-improvement__back-btn {
+
+    @media (max-width: $desktop-width - 1) {}
+
+    @media (max-width: $tablet-width - 1) {
+      margin-bottom: 24px;
+    }
+  }
+
+  .area-improvement__info {
+
+    @media (max-width: $desktop-width - 1) {
+
+    }
+
+    @media (max-width: $tablet-width - 1) {
+      padding: 24px;
+      margin-bottom: 39px;
+
+      svg {
+        top: 28px;
+        left: 24px;
+      }
+    }
+  }
+
+  .area-improvement__text {
+
+    @media (min-width: $desktop-width) {
+
+    }
+
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 24px;
+    }
+  }
+
+  .area-improvement__select {
+    padding: 15px 16px 15px;
+
+    background-color: var(--color-bg-secondary, $select-grey);
+
+    border: 1px solid var(--color-stroke, $light-grey);
+    border-radius: 5px;
+
+    @media (min-width: $desktop-width) {
+
+    }
+
+    @media (max-width: $desktop-width - 1) {
+      display: flex;
+      justify-content: center;
+    }
+
+    .placeholder {
+      text-align: center;
+      font-size: rem(15px);
+      line-height: 135%;
+    }
+
+    .ss-content {
+      left: -54.5px;
+    }
+
+    .ss-main .ss-single-selected .ss-arrow {
+      margin-left: 12px;
+    }
+
+    .ss-main .ss-single-selected .ss-arrow span {
+      width: 8px;
+      height: 8px;
+    }
+  }
+
+  .area-improvement__proposal {
+    border-top: none;
+  }
+}
