--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -172,7 +172,6 @@
     @media (max-width: $tablet-width - 1) {
       padding: 24px 32px 22px 64px;
       margin: 14px $mobile-padding 40px;
-      // margin-bottom: 40px;
 
       .info-banner__title {
         margin-top: 0;
@@ -228,6 +227,16 @@
 
   &--declined {
     border-color: $red;
+
+    @media (max-width: $desktop-width - 1) {
+      margin-left: $tablet-padding;
+      margin-right: $tablet-padding;
+    }
+
+    @media (max-width: $tablet-width - 1) {
+      margin-left: $tablet-padding;
+      margin-right: $tablet-padding;
+    }
 
     .info-banner__title {
       color: $red;
