--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -95,7 +95,7 @@
   }
 }
 
-.proposal__text-block {
+.proposal__description {
   margin-bottom: 32px;
   padding: 12px 16px;
   background-color: var(--color-bg-secondary, $color-bg);
