--- a/source/sass/blocks/user-proposal.scss
+++ b/source/sass/blocks/user-proposal.scss
@@ -176,8 +176,8 @@
 }
 
 .user-proposal--userless {
-  .user-proposal__link--address {
-    @media (min-width: $desktop-width) {
+  .user-proposal__address {
+    @media (min-width: $tablet-width) {
       width: 100%;
     }
   }
