--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -51,7 +51,7 @@
 @import 'blocks/address-pin';
 @import 'blocks/area-improvement';
 @import 'blocks/improvement-stage';
-@import 'blocks/user-proposal';
+@import 'blocks/proposal-list';
 
 // main page
 @import "blocks/news-notice";
