добавляет обёртку для описания предложения

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -52,6 +52,7 @@
 @import 'blocks/area-improvement';
 @import 'blocks/improvement-stage';
 @import 'blocks/proposal-list';
+@import 'blocks/proposal-description';
 
 // main page
 @import "blocks/news-notice";
