добавляет обёртку для загрузки изображений

--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -164,14 +164,9 @@
       margin-bottom: 6px;
     }
 
-    @media (max-width: $desktop-width - 1) {
-      margin-left: $tablet-padding;
-      margin-right: $tablet-padding;
-    }
-
     @media (max-width: $tablet-width - 1) {
       padding: 24px 32px 22px 64px;
-      margin: 14px $mobile-padding 40px;
+      margin: 14px 0 40px;
 
       .info-banner__title {
         margin-top: 0;
@@ -208,11 +203,12 @@
 
     @media (max-width: $desktop-width - 1) {
        margin-bottom: 46px;
+       margin-left: $tablet-padding;
+       margin-right: $tablet-padding;
     }
 
     @media (max-width: $tablet-width - 1) {
-      margin-top: 23px;
-      margin-bottom: 32px;
+      margin: 23px $mobile-padding 32px;
       padding-bottom: 24px;
     }
 
