--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -53,6 +53,8 @@
 @import 'blocks/improvement-stage';
 @import 'blocks/proposal-list';
 @import 'blocks/proposal-description';
+@import 'blocks/image-uploads';
+@import 'blocks/subtitle';
 
 // main page
 @import "blocks/news-notice";
