--- a/source/sass/blocks/proposal-description.scss
+++ b/source/sass/blocks/proposal-description.scss
@@ -29,15 +29,10 @@
   }
 }
 
-.proposal-description__title {
+h2 {
   margin: 0 0 32px;
-  font-weight: 400;
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 25px;
-    font-size: rem(24px);
-    line-height: rem(28px);
   }
 }
