--- a/source/sass/blocks/subtitle.scss
+++ b/source/sass/blocks/subtitle.scss
@@ -7,4 +7,11 @@
     font-size: rem(24px);
     line-height: rem(28px);
   }
+
+  &--large {
+    @media (max-width: $tablet-width - 1) {
+      font-size: rem(30px);
+      line-height: rem(36px);
+    }
+  }
 }
