Добавил страницу Разводящая по проектам 2

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,7 @@
 @import "blocks/form";
 @import "blocks/filter";
 @import "blocks/filter-vote";
+@import "blocks/filter-2.scss";
 @import "blocks/counter";
 @import "blocks/paginator";
 @import "blocks/button-star";
