--- a/source/sass/blocks/concurrent-projects.scss
+++ b/source/sass/blocks/concurrent-projects.scss
@@ -3,6 +3,7 @@
   padding: 20px 0;
 
   list-style: none;
+  text-align: left;
 }
 
 .concurrent-projects__item {
@@ -15,9 +16,11 @@
 
 .concurrent-projects__link {
   padding: 16px 32px 16px 24px;
-
-  display: flex;
-  flex-flow: column wrap;
+  display: grid;
+  grid-template-columns: 1fr 15.7%;
+  grid-template-areas:
+  "a    b"
+  "c    b";
 
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
@@ -25,6 +28,8 @@
   text-decoration: none;
 
   @media (max-width: $desktop-width - 81) {
+    display: flex;
+    flex-flow: column wrap;
     padding: 16px 24px 24px;
   }
 
@@ -33,28 +38,45 @@
   }
 }
 
-.concurrent-projects__level {
+.concurrent-projects__link > * {
+  align-self: start;
+}
+
+.concurrent-projects__status-wrapper {
+  grid-area: a;
   margin-bottom: 8px;
+
+  display: flex;
+  flex-flow: row wrap;
+
+  @media (max-width: $tablet-width - 1) {
+    flex-flow: column wrap;
+    margin-bottom: 20px;
+  }
+}
+
+.concurrent-projects__level {
+  margin-right: 12px;
 
   font-weight: 400;
   font-size: rem(14px);
   line-height: 130%;
-  color: var(--color-text, $grey)
+  color: var(--color-text, $grey);
+
+  @media (max-width: $tablet-width - 1) {
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
 }
 
 .concurrent-projects__status {
   position: relative;
 
-  margin-bottom: 8px;
   padding-left: 9px;
 
   font-weight: normal;
   font-size: rem(14px);
   line-height: 130%;
-
-  @media (max-width: $tablet-width - 1) {
-    margin-bottom: 20px;
-  }
 
   &::before {
     content: "";
@@ -88,6 +110,7 @@
 
 .concurrent-projects__title {
   margin: 0;
+  grid-area: c;
 
   font-weight: 400;
   font-size: rem(16px);
@@ -103,6 +126,7 @@
 }
 
 .concurrent-projects__period {
+  grid-area: b;
   display: flex;
   flex-flow: column wrap;
 
@@ -110,6 +134,14 @@
   font-size: rem(13px);
   line-height: 132%;
   color: var(--color-text, $grey-default);
+
+  @media (min-width: $desktop-width) {
+    margin-top: 8px;
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
+    flex-flow: row wrap;
+  }
 
   span:not(.concurrent-projects__dates) {
     margin-bottom: 2px;
@@ -123,6 +155,8 @@
     @media (max-width: $tablet-width - 1) {
       margin-bottom: 2px;
       margin-right: 0;
+
+      flex-flow: column wrap;
     }
   }
 }
