добавляет страницу бюджетов

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -57,6 +57,7 @@
 @import 'blocks/image-uploads';
 @import 'blocks/subtitle';
 @import 'blocks/concurrent-projects';
+@import 'blocks/budgets';
 
 // main page
 @import "blocks/news-notice";
