--- a/source/sass/blocks/improvement-stage.scss
+++ b/source/sass/blocks/improvement-stage.scss
@@ -38,7 +38,7 @@
     width: 6px;
     height: 6px;
 
-    background-color: var(--color-text, $orange);
+    background-color: currentColor;
     border-radius: 50%;
 
     transform: translateY(-50%);
@@ -46,21 +46,17 @@
 
   &--opened {
     color: var(--color-interactive-default, $blue-default);
-
-    &::before {
-      background-color: var(--color-interactive-default, $blue-default);
-    }
   }
 
   &--complete {
-    color: #70BF56;
-
-    &::before {
-      background-color:  #70BF56;
-    }
+    color: var(--color-interactive-default, $green)
   }
 }
 
 .improvement-stage__dates {
+  color: var(--color-text, $dark-text);
+}
+
+.improvement-stage__level {
   color: var(--color-text, $dark-text);
 }
