--- a/source/sass/blocks/budgets.scss
+++ b/source/sass/blocks/budgets.scss
@@ -1,5 +1,9 @@
 .budgets {
-  @media (max-width: $desktop-width - 1) {}
+  padding: 40px 0 71px;
+
+  @media (max-width: $desktop-width - 1) {
+    padding: 40px 0 56px;
+  }
 
   @media (max-width: $tablet-width - 1) {
     padding: 30px 0 24px;
@@ -7,30 +11,37 @@
 }
 
 .budgets__back-btn {
-  @media (max-width: $desktop-width - 1) {}
+  margin-left: 2px;
+  margin-bottom: 40px;
 
   @media (max-width: $tablet-width - 1) {
     margin-left: 5px;
+    margin-bottom: 24px;
   }
 }
 
 .budgets__info {
-  @media (max-width: $desktop-width - 1) {
-
-  }
-
-  @media (max-width: $tablet-width - 1) {
-    margin-bottom: 39px;
-  }
+  padding-bottom: 14px;
+  margin-bottom: 40px;
 }
 
 .budgets__title {
-  @media (max-width: $desktop-width - 1) {
+  font-weight: 400;
+  font-size: rem(40px);
+  line-height: rem(47px);
 
+  margin-bottom: 40px;
+
+  @media (max-width: $desktop-width - 1) {
+    font-size: rem(30px);
+    line-height: rem(36px);
   }
 
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 32px;
+
+    font-size: rem(24px);
+    line-height: rem(28px);
   }
 }
 
@@ -47,14 +58,27 @@
 }
 
 .budgets__stage-wrapper {
-  margin-bottom: 32px;
+  margin-bottom: 34px;
 
-  @media (max-width: $desktop-width - 1) {
-
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-flow: row wrap;
   }
 
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 24px;
+  }
+
+  div {
+    flex: 0 0 auto;
+
+    &:first-of-type {
+      @media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
+        margin-bottom: 16px;
+        width: 100%;
+      }
+    }
+
   }
 
   .improvement-stage__wrapper {
@@ -69,10 +93,6 @@
 
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
-  @media (max-width: $desktop-width - 1) {
-
-  }
-
   @media (max-width: $tablet-width - 1) {
     padding-bottom: 17px;
   }
@@ -84,14 +104,6 @@
 
 .budgets .budgets__list {
   padding: 40px 0 ;
-
-  @media (max-width: $desktop-width - 1) {
-
-  }
-
-  @media (max-width: $tablet-width - 1) {
-
-  }
 
   .project__link {
     @media (max-width: $tablet-width - 1) {
