--- a/source/sass/blocks/concurrent-projects.scss
+++ b/source/sass/blocks/concurrent-projects.scss
@@ -27,6 +27,12 @@
 
   text-decoration: none;
 
+  @media (min-width: $desktop-width) {
+    &:hover:not(.focus-visible) .concurrent-projects__title {
+      color: var(--color-interactive-default, $blue-accent);
+    }
+  }
+
   @media (max-width: $desktop-width - 81) {
     display: flex;
     flex-flow: column wrap;
@@ -115,6 +121,8 @@
   font-weight: 400;
   font-size: rem(16px);
   line-height: 140%;
+
+  transition: color $style-change-duration-slow;
 
   @media (max-width: $desktop-width - 1) {
     margin-bottom: 32px;
