Добавил подтверждение отправки формы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -93,6 +93,7 @@
 @import "blocks/landscaping.scss";
 @import "blocks/landscaping-form.scss";
 @import "blocks/map-section.scss";
+@import "blocks/confirmation-popup.scss";
 
 // improvement on main page
 @import "blocks/improvement.scss";
