--- a/source/sass/blocks/landscaping-form.scss
+++ b/source/sass/blocks/landscaping-form.scss
@@ -10,6 +10,12 @@
       font-size: rem(15px);
       line-height: rem(27px);
     }
+
+    &:focus {
+      &::placeholder {
+        color: transparent;
+      }
+    }
   }
 }
 
