--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -222,7 +222,7 @@
   }
 
   &--declined {
-    border-color: $red;
+    border-color: var(--color-icon, $red);
 
     @media (max-width: $desktop-width - 1) {
       margin-left: $tablet-padding;
@@ -230,16 +230,16 @@
     }
 
     @media (max-width: $tablet-width - 1) {
-      margin-left: $tablet-padding;
-      margin-right: $tablet-padding;
+      margin-left: $mobile-padding;
+      margin-right: $mobile-padding;
     }
 
     .info-banner__title {
-      color: $red;
+      color: var(--color-icon, $red);
     }
 
     .info-banner__icon {
-      color: $red;
+      color: var(--color-icon, $red);
     }
   }
 }
