--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -192,16 +192,16 @@
     background-color: var(--color-bg-main, $white);
   }
 
-  .gallery-popup .popup__container {
+  .gallery-popup:not(.gallery-popup--proposal) .popup__container {
     display: block;
     padding: 60px $mobile-padding 92px;
   }
 
-  .gallery-popup .popup__overlay {
+  .gallery-popup:not(.gallery-popup--proposal) .popup__overlay {
     display: none;
   }
 
-  .gallery-popup .popup__bar {
+  .gallery-popup:not(.gallery-popup--proposal) .popup__bar {
     position: fixed;
     z-index: 2;
     right: 0;
@@ -221,5 +221,105 @@
   .gallery-popup__frame {
     height: 230px;
     margin-bottom: 24px;
+  }
+}
+
+.gallery-popup--proposal {
+
+  .gallery-popup__content {
+    display: grid;
+    grid-template-areas:
+      "top-bar"
+      "frame"
+      "bottom-bar";
+    grid-template-columns: 1fr;
+    grid-template-rows: 64px auto 98px;
+    background-color: $dark;
+    height: 658px;
+  }
+
+  .gallery-popup__photo-description {
+    grid-area: description;
+    display: none;
+  }
+
+  .gallery-popup__frame {
+    width: 100%;
+  }
+
+  .popup__bar--bottom {
+    background-color: $dark;
+    justify-content: center;
+
+    .gallery-popup__counter {
+      min-width: 55px;
+      flex-grow: 0;
+
+      .gallery-popup__counter-current,
+      .gallery-popup__counter-total {
+        min-width: 20px;
+      }
+    }
+  }
+
+  .gallery-popup__frame .gallery__item-link,
+  .gallery-popup__frame .gallery__item,
+  .gallery-popup__frame .gallery__item-img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
+@include tablet {
+  .gallery-popup--proposal {
+    .gallery-popup__content {
+      background-color: var(--color-bg-main, $white);
+      height: 604px;
+      grid-template-rows: 72px auto 132px;
+    }
+
+    .popup__bar--top {
+      .popup__close-btn {
+        width: 44px;
+      }
+    }
+
+    .gallery-popup__frame {
+      height: 100%;
+      margin-bottom: 0;
+    }
+
+    .popup__bar--bottom {
+      background-color: var(--color-bg-main, $white);
+      padding: 0;
+
+      .gallery-popup__nav-btn {
+        width: 118px;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .gallery-popup--proposal {
+    .gallery-popup__content {
+      height: 406px;
+      grid-template-rows: 60px auto 116px;
+      padding-left: $mobile-padding;
+      padding-right: $mobile-padding;
+    }
+
+    .gallery-popup__frame .gallery__item-link,
+    .gallery-popup__frame .gallery__item,
+    .gallery-popup__frame .gallery__item-img {
+      min-height: 230px;
+    }
+
+    .popup__bar--top {
+      .popup__close-btn {
+        width: 30px;
+      }
+    }
   }
 }
