--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -268,6 +268,14 @@
     width: 100%;
     height: auto;
   }
+
+  .gallery-popup__nav-btn {
+    width: 142px;
+
+    svg {
+      margin-bottom: 2px;
+    }
+  }
 }
 
 
@@ -281,7 +289,7 @@
 
     .popup__bar--top {
       .popup__close-btn {
-        width: 44px;
+        width: 25px;
       }
     }
 
@@ -295,7 +303,9 @@
       padding: 0;
 
       .gallery-popup__nav-btn {
-        width: 118px;
+        svg {
+          margin-bottom: 0;
+        }
       }
     }
   }
@@ -318,8 +328,16 @@
 
     .popup__bar--top {
       .popup__close-btn {
-        width: 30px;
+        width: 20px;
       }
+    }
+
+    .gallery-popup__counter {
+      margin: 0 47px;
+    }
+
+    .gallery-popup__nav-btn {
+      width: 50px;
     }
   }
 }
