--- a/source/sass/blocks/improvement-stage.scss
+++ b/source/sass/blocks/improvement-stage.scss
@@ -19,6 +19,7 @@
     margin-right: 0;
     @media (max-width: $tablet-width - 1) {
       line-height: 150%;
+      margin-bottom: 0;
     }
   }
 }
