--- a/source/sass/blocks/proposal-list.scss
+++ b/source/sass/blocks/proposal-list.scss
@@ -6,7 +6,7 @@
 }
 
 .proposal-list__item {
-  padding: 41px 0 33px;
+  padding: 41px 0 32px;
 
   border-top: 1px solid var(--color-stroke, $light-grey);
   border-bottom: 1px solid var(--color-stroke, $light-grey);
@@ -78,10 +78,12 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 4px;
     margin-right: 9px;
+
+    min-width: 50%;
   }
 
   @media (max-width: $tablet-width - 1) {
-    margin-bottom: 8px;
+    margin-bottom: 24px;
   }
 
   svg {
@@ -110,7 +112,8 @@
   transition: color $style-change-duration;
 
   @media (min-width: $desktop-width) {
-    width: 80%;
+    display: inline-block;
+    max-width: 80%;
 
     &:hover:not(.focus-visible) {
       color: var(--color-interactive-default, $blue-default);
@@ -123,6 +126,7 @@
   }
 
   @media (max-width: $tablet-width - 1) {
+    display: block;
     margin-top: 24px;
     margin-bottom: 22px;
   }
