--- a/source/sass/blocks/improvement-status.scss
+++ b/source/sass/blocks/improvement-status.scss
@@ -24,13 +24,10 @@
     }
   
     &::before {
-      content: "";
+      content: '\25CF';
       position: absolute;
-      top: 4px;
-      left: -2px;
-      width: 5px;
-      height: 5px;
-      border: 3px solid;
-      border-radius: 50%;
+      top: -1px;
+      left: -1px;
+      font-size: 13px;
     }
   }
