--- a/source/sass/blocks/concurrent-projects.scss
+++ b/source/sass/blocks/concurrent-projects.scss
@@ -9,9 +9,17 @@
 .concurrent-projects__item {
   margin-bottom: 16px;
 
+  transition: box-shadow $style-change-duration-slow;
+
   &:last-of-type {
     margin-bottom: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    &:hover:not(.focus-visible) {
+      box-shadow: 0 2px 4px rgba(0,30,75,.15);
+    }
+}
 }
 
 .concurrent-projects__link {
