--- a/source/sass/blocks/concurrent-voting.scss
+++ b/source/sass/blocks/concurrent-voting.scss
@@ -4,11 +4,12 @@
   margin-bottom: 10px;
 
   @media (max-width: $desktop-width - 1) {
+    padding-top: 79px;
     margin-bottom: 25px;
   }
 
   @media (max-width: $tablet-width - 1) {
-    padding: 24px 0 0;
+    padding: 64px 0 0;
     margin-bottom: 0;
   }
 }
