--- a/source/sass/blocks/filter-2.scss
+++ b/source/sass/blocks/filter-2.scss
@@ -60,6 +60,12 @@
         margin-bottom: 31px;
         flex-direction: column;
         padding: 21px 17px;
+
+        .form-select {
+            & .ss-content {
+                left: 72px;
+            }
+        }
     }
 
     .filter-2__counter {
