--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,7 +29,6 @@
 @import "blocks/form";
 @import "blocks/filter";
 @import "blocks/filter-vote";
-@import "blocks/filter-2.scss";
 @import "blocks/counter";
 @import "blocks/paginator";
 @import "blocks/button-star";
@@ -88,6 +87,8 @@
 @import "blocks/project-item";
 @import "blocks/projects-list";
 @import "blocks/projects";
+@import "blocks/projects-2.scss";
+@import "blocks/filter-2.scss";
 
 // landscaping-form
 @import "blocks/landscaping.scss";
