--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -267,8 +267,21 @@
   .gallery-popup__frame .gallery__item,
   .gallery-popup__frame .gallery__item-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
+
+    // border-radius: 5px;
   }
+
+  // .gallery-popup__frame .gallery__item-img {
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: contain;
+
+  //   border-radius: 5px;
+  // }
+
+
 
   .gallery-popup__nav-btn {
     width: 142px;
