--- a/source/sass/blocks/filter-2.scss
+++ b/source/sass/blocks/filter-2.scss
@@ -50,7 +50,7 @@
 
 .filter-2__checkbox {
     margin: 0;
-    margin-left: 60px;
+    margin-left: 101px;
 }
 
 @include tablet {
@@ -67,14 +67,24 @@
             max-width: 740px;
         }
     }
+
+    .filter-2__checkbox {
+        margin: 0;
+        margin-left: 60px;
+    }
 }
 
 @include mobile {
     .filter-2 {
-        margin-top: 40px;
+        margin-top: 35px;
+        margin-bottom: 30px;
 
         .filter__open-btn {
             display: none;
+        }
+
+        .filter__header {
+            margin-bottom: 35px;
         }
     }
 
