--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -57,6 +57,8 @@
 @import 'blocks/subtitle';
 @import 'blocks/concurrent-projects';
 @import 'blocks/budgets';
+@import 'blocks/commentary-add.scss';
+@import 'blocks/hearings-status.scss';
 
 // main page
 @import "blocks/news-notice";
@@ -106,6 +108,9 @@
 @import "blocks/improvement-fork-4.scss";
 @import "blocks/proposal-winners.scss";
 @import "blocks/map-popup.scss";
+
+// hearings 1-4
+@import "blocks/hearings.scss";
 
 // project page
 @import "blocks/project-page";
