--- a/source/sass/blocks/commentary-add.scss
+++ b/source/sass/blocks/commentary-add.scss
@@ -75,7 +75,7 @@
     }
 
     p {
-        display: block;
+        display: none;
         position: absolute;
         right: 1px;
         bottom: -27px;
